<?xml version="1.0" encoding="utf-8"?>

<!-- main activity holds the header containing app name and logo, footer containing buttons to switch between
the fragments and a fragment container view to display the fragments. -->

<!-- Information online suggests constrained layout has the best performance and I found it easier to work with.  -->
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="#5D3E58" >

    <!-- Image view creating a box for the header. -->
    <ImageView
        android:id="@+id/iv_header"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="#44243F"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="ContentDescription" />

    <!-- Text view for the application name. -->
    <TextView
        android:id="@+id/tv_applicationName"
        android:layout_width="310dp"
        android:layout_height="30dp"
        android:gravity="center"
        android:text="@string/application_name"
        android:textColor="@color/white"
        android:textSize="22sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/iv_header"
        app:layout_constraintEnd_toStartOf="@id/iv_applicationLogo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!-- Image view for the application logo. -->
    <ImageView
        android:id="@+id/iv_applicationLogo"
        android:layout_width="55dp"
        android:layout_height="40dp"
        android:layout_marginTop="4dp"
        app:layout_constraintBottom_toBottomOf="@+id/iv_header"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/tv_applicationName"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/icon_main_activity_logo"
        android:contentDescription="@string/application_logo" />

    <!-- Adding in fragment view. -->
    <androidx.fragment.app.FragmentContainerView
        android:id="@+id/fragmentContainerView"
        android:name="com.example.weatherapplicationfinal.HomeScreenFragment"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/iv_header"
        app:layout_constraintBottom_toTopOf="@id/iv_footer"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        tools:layout="@layout/fragment_home_screen" />

    <!-- Image view creating a box for the footer. -->
    <ImageView
        android:id="@+id/iv_footer"
        android:layout_width="match_parent"
        android:layout_height="85dp"
        android:background="#44243F "
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:ignore="ContentDescription" />

    <!-- Home button to navigate fragments. -->
    <ImageButton
        android:id="@+id/bt_home"
        android:layout_width="75dp"
        android:layout_height="75dp"
        android:adjustViewBounds="true"
        app:layout_constraintBottom_toBottomOf="@id/iv_footer"
        app:layout_constraintEnd_toStartOf="@id/bt_explore"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/iv_footer"
        app:srcCompat="@drawable/bt_main_activity_home"
        android:background="@null"
        android:scaleType="centerCrop"
        android:contentDescription="@string/home_button"/>

    <!-- Explore button to navigate fragments. -->
    <ImageButton
        android:id="@+id/bt_explore"
        android:layout_width="75dp"
        android:layout_height="75dp"
        app:layout_constraintStart_toEndOf="@id/bt_home"
        app:layout_constraintEnd_toStartOf="@id/bt_visual"
        app:layout_constraintTop_toTopOf="@id/iv_footer"
        app:layout_constraintBottom_toBottomOf="@id/iv_footer"
        app:srcCompat="@drawable/bt_main_activity_explore"
        android:background="@null"
        android:scaleType="centerCrop"
        android:contentDescription="@string/explore_button"/>

    <!-- Visual button to navigate fragments. -->
    <ImageButton
        android:id="@+id/bt_visual"
        android:layout_width="75dp"
        android:layout_height="75dp"
        app:layout_constraintStart_toEndOf="@id/bt_explore"
        app:layout_constraintEnd_toStartOf="@id/bt_settings"
        app:layout_constraintTop_toTopOf="@id/iv_footer"
        app:layout_constraintBottom_toBottomOf="@id/iv_footer"
        app:srcCompat="@drawable/bt_main_activity_visual"
        android:background="@null"
        android:scaleType="centerCrop"
        android:contentDescription="@string/visual_button"/>

    <!-- Settings button to navigate fragments. -->
    <ImageButton
        android:id="@+id/bt_settings"
        android:layout_width="75dp"
        android:layout_height="75dp"
        app:layout_constraintStart_toEndOf="@id/bt_visual"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/iv_footer"
        app:layout_constraintBottom_toBottomOf="@id/iv_footer"
        app:srcCompat="@drawable/bt_main_activity_settings"
        android:background="@null"
        android:scaleType="centerCrop"
        android:contentDescription="@string/settings_button"/>

</androidx.constraintlayout.widget.ConstraintLayout>
